tests/reference/asr-division_by_zero-f2c0127.stderr
semantic error: Division by zero
 --> tests/errors/division_by_zero.f90:3:13
  |
3 |    PRINT *, 1/0
  |             ^^^ 
